[tool.poetry]
name = "whackamole-template"
version = "0.1.0"
description = ""
authors = ["Sungho Baek <ashsh0412@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
